Documentation edits made through Mintlify web editor

--- a/getstarted/installpickle.mdx
+++ b/getstarted/installpickle.mdx
@@ -1,5 +1,24 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Install Pickle"
+description: "First step to create and use your AI Self"
 ---
 
+## What is Pickle?
+
+<img
+  src="/productshot.png"
+  alt="Pickle Product Shot"
+  title="Product Shot"
+  style={{ width:"56%" }}
+/>
+
+Pickle lets you create your AI Self and use it everywhere online. You can create a new look with single snap, make it lip-sync to your voice in real-time, and seamlessly project it on Zoom, Google meet, and beyond.
+
+## Platform availability
+
+Pickle currently runs only on **macOS**. (If you are using Windows, join the [Windows](https://tally.so/r/wQWQq8) waitlist)
+
+### Step 1: Download and install
+
+1. Go to the Pickle website\
+   Click **Download for MacOS**
