Documentation edits made through Mintlify web editor

--- a/getstarted/installpickle.mdx
+++ b/getstarted/installpickle.mdx
@@ -3,7 +3,10 @@ title: "Install Pickle"
 description: "First step to create and use your AI Self"
 ---
 
+
 ## What is Pickle?
+
+> Pickle is a **console** and **infrastructure** that lets you create, customize, and utilize your **AI Self.**
 
 <img
   src="/productshot.png"
@@ -12,13 +15,49 @@ description: "First step to create and use your AI Self"
   style={{ width:"56%" }}
 />
 
-Pickle lets you create your AI Self and use it everywhere online. You can create a new look with single snap, make it lip-sync to your voice in real-time, and seamlessly project it on Zoom, Google meet, and beyond.
+You can create a new look with single snap, make it lip-sync to your voice in real-time, and seamlessly project it on Zoom, Google meet, and beyond.
 
-## Platform availability
+### Platform availability
 
 Pickle currently runs only on **macOS**. (If you are using Windows, join the [Windows](https://tally.so/r/wQWQq8) waitlist)
 
+---
+
 ### Step 1: Download and install
 
-1. Go to the Pickle website\
+1. [Go to the Pickle website](https://www.pickle.com)\
    Click **Download for MacOS**
+2. **Open the Pickle.dmg**\
+   In your Downloads folder, double-click `Pickle.dmg`. A new window with Pickle icon and the Applications folder will appear.
+3. **Drag to Applications**\
+   Drag the Pickle icon into your **Applications** folder.
+
+<Warning>
+  Make sure you always open Pickle in Applications folder. This will ensure virtual devices work properly.
+</Warning>
+
+<img
+  src="/images/dmgshot.png"
+  alt="dmgshot.png"
+  title="dmgshot.png"
+  style={{ width:"64%" }}
+/>
+
+### Step 2: Launch Pickle
+
+Open Pickle from Applications. You may see a warning:
+
+> "Pickle is from the internet. Are you sure you want to open it?"
+
+Click **Open**.
+
+### Step 3: Sign up
+
+Pickle will prompt you to sign up, by pressing **Continue with Google.**
+
+1. Accept terms & privacy policy.
+2. Choose the Google account you want to connect with.
+
+### Next: Create your first look
+
+Now you can give your AI Self a new face by going through **Create new look**.
