Documentation edits made through Mintlify web editor

--- a/getstarted/createlook.mdx
+++ b/getstarted/createlook.mdx
@@ -1,5 +1,56 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Create Look"
+description: "Take a single snap to add a new visual for your AI Self"
 ---
 
+### Step 1: Initiating Look Creation
+
+<img
+  src="/images/createlook_01.png"
+  alt="createlook_01.png"
+  title="createlook_01.png"
+  style={{ width:"66%" }}
+/>
+
+1. From the home screen, click on the <Icon icon="circle-plus" iconType="solid" /> **Add** button to start creating a new look.
+2. Click on <Icon icon="camera" iconType="solid" /> **Open Camera** and grant camera permission.
+
+### Step 2: Capturing the Snap & Face Scan
+
+Center your face in given frame and take a snap.
+
+<img
+  src="/images/createlook_02.png"
+  alt="createlook_02.png"
+  title="createlook_02.png"
+  style={{ width:"48%" }}
+/>
+
+> ### Requirements
+>
+> - Keep your **eyes open**, and **mouth closed**.
+> - **Avoid** **hands** in the frame.
+> - Avoid too bright or dark **lighting**.
+> - Ensure **no other person** is visible in the camera view.
+> - Ensure your **face is centered** and directly **facing forward**.
+
+<Warning>
+  In case your photo doesn't meet requirements, your look creation can fail.
+</Warning>
+
+
+<img
+  src="/images/createlook_03.png"
+  alt="createlook_03.png"
+  style={{ width:"48%" }}
+/>
+
+After the snap, you'll be guided to perform a face scan.\
+**Slowly rotate your head in a circular motion**, allowing the camera to **capture various angles** of your face thoroughly.
+
+> Tip: the more you show various angles of your face, the more accurately your AI Self will resemble you.
+
+### Waiting for look creation to finish
+
+- Initial look creation usually takes around **5 minutes**.
+- Approximately **1 hour later**, lip-sync functionality for your look will be ready for use.
