--- a/getstarted/installpickle.mdx
+++ b/getstarted/installpickle.mdx
@@ -1,8 +1,7 @@
 ---
 title: "Install Pickle"
-description: "First step to create and use your AI Self"
+description: "First step to create your AI Self"
 ---
-
 
 ## What is Pickle?
 
@@ -32,9 +31,9 @@ Pickle currently runs only on **macOS**. (If you are using Windows, join the [Wi
 3. **Drag to Applications**\
    Drag the Pickle icon into your **Applications** folder.
 
-<Warning>
+<Danger>
   Make sure you always open Pickle in Applications folder. This will ensure virtual devices work properly.
-</Warning>
+</Danger>
 
 <img
   src="/images/dmgshot.png"
