--- a/getstarted/createlook.mdx
+++ b/getstarted/createlook.mdx
@@ -38,7 +38,6 @@ Center your face in given frame and take a snap.
   In case your photo doesn't meet requirements, your look creation can fail.
 </Warning>
 
-
 <img
   src="/images/createlook_03.png"
   alt="createlook_03.png"
@@ -50,7 +49,7 @@ After the snap, you'll be guided to perform a face scan.\
 
 > Tip: the more you show various angles of your face, the more accurately your AI Self will resemble you.
 
-### Waiting for look creation to finish
+### Waiting for Look Creation to Finish
 
 - Initial look creation usually takes around **5 minutes**.
 - Approximately **1 hour later**, lip-sync functionality for your look will be ready for use.
