--- a/getstarted/activatinglipsync.mdx
+++ b/getstarted/activatinglipsync.mdx
@@ -3,7 +3,6 @@ title: "Activating Lip-sync Control"
 description: "Let your AI Self lip-sync to your voice in real-time."
 ---
 
-
 ## Enabling Lip-sync Control for Each Look
 
 <img
@@ -40,7 +39,7 @@ Once activation is completed:
   style={{ width:"57%" }}
 />
 
-Enable the Voice Isolation setting to ensure clear audio input. This is one-time setup, so you don't need to enable everytime you open the app. For details, see <u>What is Voice Isolation</u> below.
+Enable the Voice Isolation setting to ensure clear audio input. This is one-time setup, so you don't need to enable everytime you open the app. For details, see [What is Voice Isolation](https://pickle.mintlify.app/getstarted/activatinglipsync#what-is-voice-isolation%3F) below.
 
 ### Step 3: Using Lip-sync
 
