Documentation edits made through Mintlify web editor

--- a/getstarted/activatinglipsync.mdx
+++ b/getstarted/activatinglipsync.mdx
@@ -52,7 +52,7 @@ Enable the Voice Isolation setting to ensure clear audio input. This is one-time
 
 Once started, speak into your microphone. Your AI Self will mirror your mouth movements with less than a 1-second delay.
 
-## Control Pannel
+## Control Panel
 
 <AccordionGroup>
   <Accordion title="Selecting Microphone" icon="microphone-stand">
@@ -90,34 +90,11 @@ Once started, speak into your microphone. Your AI Self will mirror your mouth mo
   </Accordion>
 </AccordionGroup>
 
-## What is Pickle Delayed Voice for Lip-sync?
+## Pickle Delayed Voice for Lip-sync
 
-This is for when you try to stream your AI Self into other apps like Zoom.
+This is for when you try to stream your AI Self into other apps like Zoom. It is an audio stream that has exactly same 0.5s delay with your AI Self View when you're using lip-sync control. For a detailed explanation, see [Stream to Other Apps](https://pickle.mintlify.app/getstarted/streamtootherapps).
 
-<img
-  src="/images/activatinglipsync_09.png"
-  alt="activatinglipsync_09.png"
-  title="activatinglipsync_09.png"
-  style={{ width:"48%" }}
-/>
-
-- Your**AI Self view (Pickle Camera)**  is **0.5s slower** than your real voice.
-- So we made Pickle Delayed Voice for Lip-sync, which is an **audio stream** that is exactly \*\*0.5s delayed version \*\*of your voice input, so that matches perfectly with Pickle Camera.
-
-In video call, select **Pickle Camera** as your camera and **Pickle Delayed Voice for Lip-sync** as your audio. Your video and audio will appear perfectly synced to other participants.
-
-### Checking Sync Between Pickle Delayed Voice for Lip-sync and Your AI Self View
-
-<img
-  src="/images/activatinglipsync_10.png"
-  alt="activatinglipsync_10.png"
-  title="activatinglipsync_10.png"
-  style={{ width:"33%" }}
-/>
-
-To test the delayed audio output and see how it looks like to your opponent in Video calls, activate Preview Pickle Delayed Voice for Lip-sync on Speaker. The feedback sound will matches with your AI Self view.
-
-## What is Voice Isolation?
+## Voice Isolation
 
 Voice Isolation prevents your microphone from capturing opponent's speaking audio. Effective when using built-in microphones (e.g., MacBook Pro Microphone) instead of earbuds. This setting is saved, so you don't need to enable it every time.
 
