--- a/getstarted/streamtootherapps.mdx
+++ b/getstarted/streamtootherapps.mdx
@@ -1,4 +1,64 @@
 ---
-title: "New file"
-description: "Description of your new file."
+title: "Stream to Other Apps"
+description: "Show up as your AI Self every time you need."
 ---
+
+## Enabling Streaming
+
+<img
+  src="/images/stream_01.png"
+  alt="stream_01.png"
+  title="stream_01.png"
+  style={{ width:"40%" }}
+/>
+
+In the control panel, click **Start Stream to Pickle Camera** to begin streaming. If this is your first time starting the stream, you'll need to install virtual devices and restart. Simply follow the on-screen instructions to complete the installation.
+
+## Select Devices in External Apps
+
+In the external app (e.g., Zoom, Google Meet) follow:
+
+1. Select **Pickle Camera** as your camera.
+
+<img
+  src="/images/zoom_01.png"
+  alt="zoom_01.png"
+  title="zoom_01.png"
+  style={{ width:"43%" }}
+/>
+
+2. Choose **Pickle Delayed Voice for Lip-sync** as your audio input.
+
+<img
+  src="/zoom_02.png"
+  alt="zoom_02.png"
+  title="zoom_02.png"
+  style={{ width:"43%" }}
+/>
+
+## Pickle Delayed Voice for Lip-sync
+
+This is for when you try to stream your AI Self into other apps like Zoom.
+
+<img
+  src="/images/activatinglipsync_09.png"
+  alt="activatinglipsync_09.png"
+  title="activatinglipsync_09.png"
+  style={{ width:"53%" }}
+/>
+
+- Your **AI Self view (Pickle Camera)**  is **0.5s slower** than your real voice.
+- So we made Pickle Delayed Voice for Lip-sync, which is an **audio stream** that is exactly **0.5s delayed version** of your voice input, so that matches perfectly with Pickle Camera.
+
+In video call, select **Pickle Camera** as your camera and **Pickle Delayed Voice for Lip-sync** as your audio. Your video and audio will appear perfectly synced to other participants.
+
+### Checking Sync Between Pickle Delayed Voice for Lip-sync and Your AI Self View
+
+<img
+  src="/images/activatinglipsync_10.png"
+  alt="activatinglipsync_10.png"
+  title="activatinglipsync_10.png"
+  style={{ width:"53%" }}
+/>
+
+To test the delayed audio output and see how it looks like to your opponent in Video calls, activate Preview Pickle Delayed Voice for Lip-sync on Speaker. The feedback sound will matches with your AI Self view.
