Documentation edits made through Mintlify web editor

--- a/troubleshooting/uninstallpickle.mdx
+++ b/troubleshooting/uninstallpickle.mdx
@@ -1,4 +1,29 @@
 ---
-title: "New file"
-description: "Description of your new file."
+title: "Uninstall Pickle"
 ---
+
+Simply deleting the Pickle App might leave some virtual devices installed. Follow the steps below to remove them completely.
+
+---
+
+## "Meeting Detected" notification won't disappear
+
+1. Open **System Settings**.
+2. Navigate to **General** \> **Login Items & Extensions**.
+3. Under **Allow in the Background**, find **Pickle** and toggle it off.
+
+## Pickle Camera won't uninstall
+
+1. Open **System Settings**.
+2. Navigate to **General** \> **Login Items & Extensions**.
+3. Scroll down to the **Extensions** section.
+4. Under **Camera Extensions**, click the <Icon icon="circle-info" iconType="regular" /> **info button**.
+5. Locate **Pickle** (pickleVirtualCam), click the <Icon icon="circle-ellipsis" /> **three-dot button**, and select **Delete Extension**.
+
+## Pickle Delayed Voice for Lip-sync won't uninstall
+
+1. Open **Finder**.
+2. From the top menu, click **Go**.
+3. Click \*\*Go to Folder... \*\*and type `/` , then press **Enter**.
+4. Navigate to `Macintosh HD > Library > Audio > Plug-Ins > HAL`.
+5. Delete the folder named `PickleVirtualMic.driver`.
