Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: "How can I help you?"
 description: "You can find every guide for using Pickle here."
+mode: "wide"
 ---
 
 <img
@@ -49,3 +50,5 @@ Update your docs to your brand and add valuable content for the best user conver
     Check out our showcase of our favorite documentation
   </Card>
 </CardGroup>
+
+/
