--- a/getstarted/installpickle.mdx
+++ b/getstarted/installpickle.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Install Pickle"
+icon: "image-polaroid-user"
 description: "First step to create your AI Self"
 ---
-
 
 ## What is Pickle?
 
