Documentation edits made through Mintlify web editor

--- a/getstarted/activatinglipsync.mdx
+++ b/getstarted/activatinglipsync.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Activating Lip-sync Control"
+icon: "lips"
 description: "Let your AI Self lip-sync to your voice in real-time."
 ---
 
