--- a/getstarted/createlook.mdx
+++ b/getstarted/createlook.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Create Look"
+icon: "image-polaroid-user"
 description: "Take a single snap to add a new visual for your AI Self"
 ---
 
