--- a/troubleshooting/streamtroubleshooting.mdx
+++ b/troubleshooting/streamtroubleshooting.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Stream Troubleshooting"
+icon: "video"
 ---
 
 When you're trying to stream your AI Self view to other apps, **Pickle Camera** play as a video output, and **Pickle Delayed Voice for Lip-sync** play as an audio output from your AI Self that you should choose as an audio input in other apps. Both are virtual devices that you can install, update, delete and can be selected as camera and audio inputs across any app on macOS.
