--- a/troubleshooting/uninstallpickle.mdx
+++ b/troubleshooting/uninstallpickle.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Uninstall Pickle"
+icon: "hexagon-minus"
 ---
 
 Simply deleting the Pickle App might leave some virtual devices installed. Follow the steps below to remove them completely.
