Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: "How can I help you?"
-description: "You can find every guide for using Pickle here."
+title: "Learn about Pickle"
+description: "Find guide, troubleshoot errors about your AI Self."
 mode: "custom"
 ---
 
@@ -12,16 +12,14 @@ mode: "custom"
 
 ## Common FAQs
 
-The first step to world-class documentation is setting up your editing environments.
-
 <CardGroup cols={3}>
-  <Card title="Edit Your Docs" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
-    Get your docs set up locally for easy development
+  <Card title="Start Pickle" icon="rocket" href="https://pickle.mintlify.app/getstarted/installpickle">
+    Create your AI Self, activate lip-sync control, stream
   </Card>
-  <Card title="Preview Changes" icon="image" href="https://mintlify.com/docs/development">
-    Preview your changes before you push to make sure they're perfect
+  <Card title="How to Stream" icon="video" href="https://pickle.mintlify.app/getstarted/streamtootherapps">
+    Show up as your AI Self in other apps
   </Card>
-  <Card title="New Card" icon="sparkles">
-    
+  <Card title="Stream Troubleshoot" icon="wrench" href="https://pickle.mintlify.app/troubleshooting/streamtroubleshooting">
+    Pickle Camera & Pickle Delayed Voice for Lip-sync
   </Card>
 </CardGroup>
