Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -12,13 +12,13 @@ description: "Find guide, troubleshoot errors about your AI Self."
 ## Common FAQs
 
 <CardGroup cols={3}>
-  <Card title="Start Pickle" icon="rocket" href="https://pickle.mintlify.app/getstarted/installpickle">
+  <Card title="Start Pickle" icon="rocket" href="/getstarted/installpickle">
     Create your AI Self, activate lip-sync control, stream
   </Card>
-  <Card title="How to Stream" icon="video" href="https://pickle.mintlify.app/getstarted/streamtootherapps">
+  <Card title="How to Stream" icon="video" href="/getstarted/streamtootherapps">
     Show up as your AI Self in other apps
   </Card>
-  <Card title="Stream Troubleshoot" icon="wrench" href="https://pickle.mintlify.app/troubleshooting/streamtroubleshooting">
+  <Card title="Stream Troubleshoot" icon="wrench" href="/troubleshooting/streamtroubleshooting">
     Pickle Camera & Pickle Delayed Voice for Lip-sync
   </Card>
 </CardGroup>
