Documentation edits made through Mintlify web editor

--- a/getstarted/activatinglipsync.mdx
+++ b/getstarted/activatinglipsync.mdx
@@ -40,7 +40,7 @@ Once activation is completed:
   style={{ width:"57%" }}
 />
 
-Enable the Voice Isolation setting to ensure clear audio input. This is one-time setup, so you don't need to enable everytime you open the app. For details, see [What is Voice Isolation](https://pickle.mintlify.app/getstarted/activatinglipsync#what-is-voice-isolation%3F) below.
+Enable the Voice Isolation setting to ensure clear audio input. This is one-time setup, so you don't need to enable everytime you open the app. For details, see [What is Voice Isolation](/getstarted/activatinglipsync#what-is-voice-isolation%3F) below.
 
 ### Step 3: Using Lip-sync
 
