Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,5 @@
 ---
-title: "Learn about Pickle"
-description: "Find guide, troubleshoot errors about your AI Self."
+title: " "
 ---
 
 <img
@@ -8,6 +7,8 @@ description: "Find guide, troubleshoot errors about your AI Self."
   src="/images/hero-dark.png"
   alt="Hero Dark"
 />
+
+![zgdg.png](/images/zgdg.png)
 
 ## Common FAQs
 
